--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
   "cSpell.words": [
+    "acidente",
     "acima",
     "agencia",
     "Agência",
     "apenas",
     "Aqui",
+    "arquivo",
     "atingido",
     "ATIVAS",
     "Atual",
@@ -14,8 +16,11 @@
     "Buscamos",
     "CADASTRADAS",
     "CADASTRADOS",
+    "CAMINHO",
     "cancelado",
     "caracteres",
+    "carregar",
+    "caso",
     "certa",
     "Chame",
     "cidade",
@@ -32,9 +37,11 @@
     "criação",
     "criada",
     "criado",
+    "Criamos",
     "criar",
     "definido",
     "deixa",
+    "deletada",
     "dentro",
     "depositar",
     "Depósito",
@@ -64,6 +71,7 @@
     "existe",
     "existem",
     "existente",
+    "existir",
     "extrato",
     "falhou",
     "fantasma",
@@ -76,6 +84,7 @@
     "FUNÇÕES",
     "Garante",
     "Gerando",
+    "Grava",
     "incrementar",
     "informado",
     "Informe",
@@ -91,6 +100,7 @@
     "linha",
     "lista",
     "listar",
+    "listas",
     "lógica",
     "logradouro",
     "Mantendo",
@@ -131,6 +141,7 @@
     "realizadas",
     "realizado",
     "Registrando",
+    "relativo",
     "restante",
     "Retorna",
     "Reutilização",
@@ -140,15 +151,18 @@
     "sacou",
     "Sair",
     "saldo",
+    "salvar",
     "saque",
     "saques",
     "seja",
     "selecione",
     "sensação",
+    "sido",
     "sigla",
     "somente",
     "sucesso",
     "suficiente",
+    "tenha",
     "tipo",
     "Tratamento",
     "trilha",
@@ -163,6 +177,7 @@
     "validado",
     "validando",
     "valores",
+    "vazias",
     "venv",
     "vimos",
     "Vinculando",
