--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,35 @@
 {
   "cSpell.words": [
+    "acessamos",
+    "acidentalmente",
     "acidente",
     "acima",
+    "adicionar",
     "agencia",
     "Agência",
+    "aparece",
     "apenas",
+    "aplicação",
     "Aqui",
+    "Argumentos",
+    "Armazena",
+    "Armazenamento",
+    "arquitetura",
     "arquivo",
+    "Asterisco",
     "atingido",
     "ATIVAS",
     "Atual",
+    "Autor",
     "bairro",
     "BANCÁRIO",
+    "biblioteca",
+    "blocos",
     "Busca",
     "Buscamos",
+    "cada",
     "CADASTRADAS",
+    "cadastrado",
     "CADASTRADOS",
     "CAMINHO",
     "cancelado",
@@ -22,36 +37,51 @@
     "carregar",
     "caso",
     "certa",
+    "chamar",
     "Chame",
     "cidade",
     "cliente",
+    "Clientes",
     "Código",
     "colorama",
+    "Comentários",
     "completo",
+    "confusões",
+    "consiste",
     "conta",
     "contador",
     "Contando",
     "contas",
     "conter",
+    "Convenções",
+    "Corrente",
     "correta",
     "criação",
     "criada",
     "criado",
     "Criamos",
     "criar",
+    "Cristiano",
     "definido",
     "deixa",
     "deletada",
     "dentro",
     "depositar",
     "Depósito",
+    "desafio",
     "Descrição",
     "desejada",
+    "desenvolvedor",
+    "desenvolvido",
     "deve",
     "dicionário",
+    "Diferentes",
     "Digite",
     "dígitos",
+    "Documentação",
+    "documentar",
     "Efeito",
+    "Encapsulamento",
     "encerrado",
     "Encerrando",
     "encontrada",
@@ -60,13 +90,19 @@
     "endereço",
     "entrada",
     "Erro",
+    "especiais",
     "específica",
+    "Essencial",
     "está",
     "estado",
+    "estilizada",
+    "Estrutura",
     "exatamente",
     "excede",
     "excedeu",
     "excedido",
+    "Execução",
+    "Exemplo",
     "exibir",
     "existe",
     "existem",
@@ -78,17 +114,30 @@
     "fechar",
     "filtrar",
     "fluxo",
+    "foco",
+    "fonte",
     "foram",
     "função",
+    "Funcionalidades",
     "funcoes",
     "FUNÇÕES",
     "Garante",
+    "garantindo",
     "Gerando",
+    "Gerenciamento",
     "Grava",
+    "Hierarquia",
+    "historico",
+    "histórico",
+    "Implementação",
     "incrementar",
     "informado",
     "Informe",
     "Inicializamos",
+    "injetamos",
+    "Instalação",
+    "Instale",
+    "instâncias",
     "insuficiente",
     "inteiro",
     "inválida",
@@ -103,6 +152,7 @@
     "listas",
     "lógica",
     "logradouro",
+    "lugar",
     "Mantendo",
     "máximo",
     "mensagem",
@@ -111,6 +161,11 @@
     "movimentações",
     "nasc",
     "nascimento",
+    "necessário",
+    "Neste",
+    "Nível",
+    "nomeados",
+    "nomeie",
     "nosso",
     "notas",
     "novamente",
@@ -121,64 +176,105 @@
     "número",
     "números",
     "objetivo",
+    "objeto",
+    "objetos",
+    "obriga",
     "Obrigado",
     "obter",
     "opcao",
     "Operação",
+    "organização",
+    "Orientada",
+    "Painéis",
+    "parâmetro",
+    "passado",
     "Passamos",
     "passando",
+    "Pegamos",
     "pelo",
+    "PERSISTÊNCIA",
+    "Polimorfismo",
     "positivo",
     "PRINCIPAIS",
+    "processados",
     "processamento",
     "Processando",
     "processar",
     "programa",
+    "Programação",
     "Projeto",
     "pycache",
     "pygments",
     "quebras",
+    "realiza",
     "realizadas",
     "realizado",
+    "realizar",
+    "Recria",
     "Registrando",
     "relativo",
+    "repositório",
     "restante",
+    "RESTAURA",
+    "Restaurar",
     "Retorna",
     "Reutilização",
     "rigorosa",
+    "robusto",
     "rprint",
     "sacar",
     "sacou",
+    "Saindo",
     "Sair",
     "saldo",
     "salvar",
     "saque",
     "saques",
+    "seções",
+    "segurança",
     "seja",
     "selecione",
     "sensação",
+    "separar",
     "sido",
     "sigla",
+    "sintaxe",
     "somente",
+    "subseções",
     "sucesso",
     "suficiente",
+    "Tabelas",
+    "Técnicas",
+    "Tecnologias",
     "tenha",
+    "Tenta",
     "tipo",
+    "transacao",
+    "transação",
+    "transacoes",
+    "transações",
     "Tratamento",
     "trilha",
+    "única",
+    "usamos",
     "usuario",
     "usuário",
     "usuarios",
     "Usuários",
     "UTILITÁRIOS",
+    "utiliza",
+    "Utilizadas",
     "UTILIZADORES",
+    "utilizamos",
     "Validação",
     "validações",
     "validado",
     "validando",
+    "válido",
     "valores",
     "vazias",
     "venv",
+    "Versão",
     "vimos",
     "Vinculando",
     "Você"
